02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-gateways
  annotations:
    service.beta.kubernetes.io/port_80_no_probe_rule: "true"
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.apps.tarserv.com"
      allowedRoutes:
        namespaces:
          from: All
