04-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-app-route
  namespace: platform
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-gateways
  hostnames:
    - "sample.apps.tarserv.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sample-app
          port: 8080
